fix dark mode styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,7 @@ button {
   font-size: 16px;
   padding: 8px;
   border-radius: 0;
+  color: rgb(156, 163, 175);
 
   &:hover {
     cursor: pointer;
