--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --text: #6b6375;
   --text-h: #08060d;
   --bg: #fff;
@@ -28,9 +28,9 @@
   @media (max-width: 1024px) {
     font-size: 16px;
   }
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --text: #9ca3af;
     --text-h: #f3f4f6;
@@ -48,7 +48,7 @@
   #social .button-icon {
     filter: invert(1) brightness(2);
   }
-}
+} */
 
 #root {
   width: 1126px;
@@ -60,6 +60,8 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  color: rgb(156, 163, 175);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
@@ -68,7 +70,7 @@ body {
 
 h1,
 h2 {
-  font-family: var(--heading);
+  font-family: system-ui, 'Segoe UI', Roboto, sans-serif;
   font-weight: 500;
   color: var(--text-h);
 }
